# jTDC

./: .gitmodules  README.md
documentation/: README.md
documentation/img_sampling/: entries_per_bin.tex  width_per_bin.tex
implementations/jTDC_XC6SLX150_VFB6_Discriminator/: jDisc.ucf  jDisc.v  jTDC_XC6SLX150_VFB6_Discriminator.xise  maplogoptregdupct5.xds
implementations/jTDC_XC6SLX150_VFB6_LVDS/: jTDC_XC6SLX150_VFB6_LVDS.xise  jTDCv6.ucf  jTDCv6.v  mapextraeffort2ct45.xds
modules/: BRAM_shift.v  datalatch.v  datapipe.v  leading_edge_extractor.vhdl  output_shaper.v
modules/VFB6/: bus_interface_vfb6.vhdl  mez_disc16.vhdl  mez_lvds_in.vhdl  mez_lvds_out.vhdl  pll_vfb6_400.v  vfb6.ucf  vfb6_meza_lvttl.ucf  vfb6_mezb_lvttl.ucf  vfb6_mezc_lvttl.ucf
modules/VFB6/I2C/: i2c_interface.vhdl  i2c_master_bit_ctrl.vhd  i2c_master_byte_ctrl.vhd
modules/VFB6/disc16/: ADC_LT2433_1_Receiver.vhd  Controller_25AA02E48.vhd  (+4 more)
modules/clipper/: leading_edge_clipper.vhdl  signal_clipper.vhdl
modules/counter/: dsp_multioption_counter.v  loadable_downcounter8.v  slimfast_multioption_counter.ucf  slimfast_multioption_counter.v
modules/encoder/: 96bit_encoder.v
modules/fifo/: standard_fifo_poll.vhdl
modules/register/: readonly_register_with_readtrigger.vhdl  rw_register.vhdl  toggle_register.vhdl
modules/sampler/: carrysampler_spartan6_20ps.v
modules/tdc/: BRAM_TDC_256_SWITCHING.v  jTDC_core.ucf  jTDC_core.v  jTDC_modules.v
tools/jAnalyzer/: .travis.yml  README.md
tools/jAnalyzer/src/: CMakeLists.txt  jAnalyzer.cpp
tools/jDaqLite/: .travis.yml  README.md
tools/jDaqLite/src/: CMakeLists.txt  jDAQLite.cpp
tools/jDaqLite/src/vmelib/: vmelib.cpp
tools/jDaqLite/src/vmelib/include/: vmeioctl.h  vmelib.h
(+5 files in other folders)
